# financial-copilot

./: .flake8  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
assets/chunks/: chunks_KID.json
assets/templates/: text_extraction.prompty
infra/: abbreviations.json  azuredeploy.json  main.bicep  main.parameters.json
src/: app.py
src/api/: __init__.py  service.py
src/database/: __init__.py  schema.py  service.py  vector_db.py
src/kernel/: service.py
src/orchestrator/: service.py
src/plugins/: processing_plugin.py  rag_plugin.py  sql_plugin.py
src/plugins/nlp_to_sql/: config.json  skprompt.txt
src/rag/: chunker.py
src/scripts/: create_index_from_json.py
src/tests/: test_kernel.py  test_plugins.py
src/utils/: __init__.py  config.py
